Fix contrast of drawer title

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -59,6 +59,7 @@
       }
 
       .paper-drawer-title {
+        color: white;
         display: -webkit-box;
         padding: 20px 0;
         font-size: 19px;
